GraphQL updates for activity master